--- a/android/build.gradle
+++ b/android/build.gradle
@@ -9,12 +9,15 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.2'
+        classpath 'com.android.tools.build:gradle:3.5.3'
     }
 }
 
 rootProject.allprojects {
     repositories {
+        flatDir {
+            dirs '../../../android/app/libs'
+        }
         google()
         jcenter()
         maven { url "https://www.jitpack.io" }
@@ -34,6 +37,8 @@ android {
         disable 'InvalidPackage'
     }
     dependencies {
-        implementation 'com.github.yalantis:ucrop:2.2.4'
+//        implementation 'com.github.yalantis:ucrop:2.2.4'
+        implementation 'androidx.appcompat:appcompat:1.1.0'
+        implementation fileTree(dir: 'libs', include: ['*.aar','*.jar'])
     }
 }
