--- a/android/build.gradle
+++ b/android/build.gradle
@@ -44,6 +44,7 @@ android {
     dependencies {
 //        implementation 'com.github.yalantis:ucrop:2.2.4'
         implementation 'androidx.appcompat:appcompat:1.1.0'
-        implementation fileTree(dir: '../../../android/app/libs', include: ['*.aar','*.jar'])
+//        implementation fileTree(dir: '../../../android/app/libs', include: ['*.aar','*.jar'])
+        provided files('libs/ucrop-release.aar')
     }
 }
